<resources>
    <string name="app_name">CookBook</string>
    //Titles
    <string name="recipes_fragment">Recipes</string>
    <string name="title_home">Home</string>
    <string name="title_my_recipes">My recipes</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_basket">Basket</string>
    <string name="title_details">Details</string>
    <string name="title_add">New recipe</string>
    <string name="title_search_ingredients">Search ingredients</string>
    <string name="title_overview">Overview</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_instruction">Instruction</string>
    <string name="nav_my_recipes">My recipes</string>
    <string name="add_recipes">Add recipe</string>
    <string name="add_ingredient">Add new ingredient</string>
    // Bottom Sheet
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>
    <string name="vegancy">Vegan</string>
    <string name="default_chip">All</string>
    <string name="common_chip">Common</string>

    <string name="search">Search</string>
    <string name="bookmarks_TV">In Bookmarks</string>
    <string name="add">Add</string>
    <string name="error">Fill in all the fields</string>
    <string name="bookmarks_added">Added in bookmarks</string>
    <string name="bookmarks_deleted">Deleted from bookmarks</string>
    <string name="add_basket">Added in basket</string>
    <string name="delete">Recipe has been deleted</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="photo">Pick photo</string>
    <string name="instruction_tv">Instruction:</string>
    <string name="description_tv">Description:</string>

    <string name="recipe_nameEd">Name recipe</string>
    <string name="recipe_descriptionEd">Enter description</string>
    <string name="recipe_instructionEd">Enter instruction</string>
    <string name="recipe_timeTV">Cooking time in minutes</string>
    <string name="recipe_descriptionTV">Description:</string>
    <string name="recipe_instructionTV">Instruction:</string>
    <string name="recipe_addImageBtn">Add Image</string>
    <string name="bookmarks_tv">This is where your recipes will be stored</string>
    <string name="clear_basket">Clear Basket</string>

</resources>