<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cookbook.ui.fragments.RecipesFragment"
        android:label="@string/recipes_fragment"
        tools:layout="@layout/fragment_recipes" >
        <action
            android:id="@+id/action_recipesFragment_to_recipesBottomSheet"
            app:destination="@id/recipesBottomSheet" />
        <argument
            android:name="backFromBottomSheet"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_recipesFragment_to_detailsActivity"
            app:destination="@id/detailsActivity" />
    </fragment>
    <dialog
        android:id="@+id/recipesBottomSheet"
        android:name="com.example.cookbook.ui.fragments.RecipesBottomSheet"
        android:label="recipes_bottom_sheet"
        tools:layout="@layout/recipes_bottom_sheet" >
        <action
            android:id="@+id/action_recipesBottomSheet_to_recipesFragment"
            app:destination="@id/navigation_home" />
    </dialog>
    <activity
        android:id="@+id/detailsActivity"
        android:name="com.example.cookbook.ui.DetailsActivity"
        android:label="@string/title_details"
        tools:layout="@layout/activity_details" >
        <argument
            android:name="result"
            app:argType="com.example.cookbook.models.Result" />
    </activity>
    <activity
        android:id="@+id/addRecipeActivity"
        android:name="com.example.cookbook.ui.AddRecipeActivity"
        android:label="@string/title_add"
        tools:layout="@layout/activity_add_recipe" >
    </activity>
    <fragment
        android:id="@+id/navigation_my_recipes"
        android:name="com.example.cookbook.ui.fragments.MyRecipesFragment"
        android:label="@string/title_my_recipes"
        tools:layout="@layout/fragment_my_recipes">
    <action
        android:id="@+id/action_myRecipesFragment_to_addRecipeActivity"
        app:destination="@id/addRecipeActivity" />
        <action
            android:id="@+id/action_myRecipesFragment_to_myRecipesDetailsActivity"
            app:destination="@id/myRecipeDetailsActivity" />
    </fragment>

    <activity
        android:id="@+id/myRecipeDetailsActivity"
        android:name="com.example.cookbook.ui.MyRecipeDetailsActivity"
        android:label="activity_my_recipe_details"
        tools:layout="@layout/activity_my_recipe_details" >
        <argument
            android:name="recipe"
            app:argType="com.example.cookbook.data.database.MyRecipesEntity" />
    </activity>

</navigation>